Revert "Fix/attachment forwarding"